--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.7.2
 distlib==0.3.8
+dj-database-url==0.5.0
 Django==4.2.9
 filelock==3.13.1
 gunicorn==20.1.0
 platformdirs==4.1.0
+psycopg2==2.9.9
 setuptools==69.0.3
 sqlparse==0.4.4
 tzdata==2023.4
