--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ bleach==6.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+crispy-bootstrap5==0.7
 cryptography==42.0.2
 defusedxml==0.7.1
 distlib==0.3.8
 dj-database-url==0.5.0
 Django==4.2.9
-django-allauth==0.57.0
+django-allauth==0.44.0
+django-crispy-forms==2.1
 django-summernote==0.8.20.0
 filelock==3.13.1
 gunicorn==20.1.0
